force-app/main/default/objects/Occupation_recommendation__c/Occupation_recommendation__c.object-meta.xml
<CustomObject>
    <label>המלצת עיסוקים</label>
    <nameField>
        <label>מס&apos; המלצת עיסוקים</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>המלצות עיסוקים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>