force-app/main/default/objects/Occupation_recommendation__c/fields/Holland_questionnaire__c.field-meta.xml
<CustomField>
    <fullName>Holland_questionnaire__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>שאלון הולנד</label>
    <referenceTo>Holland_questionnaire__c</referenceTo>
    <relationshipLabel>המלצות עיסוקים</relationshipLabel>
    <relationshipName>Holland_questionnaire</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>