force-app/main/default/objects/Occupation_recommendation__c/fields/ProfessionalFitDescription__c.field-meta.xml
<CustomField>
    <fullName>ProfessionalFitDescription__c</fullName>
    <label>מידת התאמה לעיסוק</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Best</fullName>
            </value>
            <value>
                <fullName>Good</fullName>
            </value>
            <value>
                <fullName>Great</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>