force-app/main/default/objects/Occupation_recommendation__c/fields/ProfessionId__c.field-meta.xml
<CustomField>
    <fullName>ProfessionId__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>עיסוק</label>
    <referenceTo>Occupation__c</referenceTo>
    <relationshipLabel>המלצות עיסוקים</relationshipLabel>
    <relationshipName>occupation_recommendation</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>