force-app/main/default/objects/Occupation_recommendation__c/listViews/AllOccRecommendations.listView-meta.xml
<ListView>
    <fullName>AllOccRecommendations</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ProfessionalFitDescription__c</columns>
    <columns>ProfessionId__c</columns>
    <columns>Holland_questionnaire__c</columns>
    <filterScope>Everything</filterScope>
    <label>כל המלצות העיסוקים</label>
</ListView>